--- a/Student_Card/Views/StudentCard/Create.cshtml
+++ b/Student_Card/Views/StudentCard/Create.cshtml
@@ -37,7 +37,7 @@
                         </button>
                     </div>
                     <div class="col-6 col-md-6">
-                        <a asp-controller="StudentCard" asp-action="Index" class="btn btn-secondary w-100">
+                        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary w-100">
                             <i class="bi bi-x-circle"> Cancel</i>
                         </a>
                     </div>
