--- a/Student_Card/Views/StudentCard/Delete.cshtml
+++ b/Student_Card/Views/StudentCard/Delete.cshtml
@@ -1,4 +1,7 @@
 ﻿@model StudentCard
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 <div class="w-100 card border-0">
     <div class="card-header bg-info bg-gradient m-lg-0 py-3">
         <div class="row">
@@ -51,12 +54,12 @@
 
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-danger w-100">
+                        <button type="submit" class=" btn btn-danger w-100" >
                             <i class="bi bi-trash-fill"> Delete</i>
                         </button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary w-100">
+                        <a asp-controller="StudentCard" asp-route-user="@UserManager.GetUserName(User)" asp-action="Index" class="btn btn-secondary w-100">
                             <i class="bi bi-x-circle"> Cancel</i>
                         </a>
                     </div>
