--- a/Student_Card/Views/StudentCard/Index.cshtml
+++ b/Student_Card/Views/StudentCard/Index.cshtml
@@ -21,8 +21,7 @@
                 </a>
             </div>
         </div>
-        @if(Model.Role==SD.Role_Admin)
-        {
+       
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -33,6 +32,7 @@
                         <th>Course</th>
                         <th>Current Year</th>
                         <th>Image</th>
+                        <th>Status</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -50,6 +50,7 @@
                                 <img src="@item.ImageUrl" width="150px" height="100px"
                                      style="border-radius: 5px; border: 1px solid #bbb9b9" />
                             </td>
+                            <td>@Html.DisplayFor(modelItem => item.Status)</td>
                             <td>
                                 <a class="btn btn-success" asp-action="" asp-route-id="@item.Id"><i class="bi bi-check-circle"> Accept</i></a>
                                 <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id"> <i class="bi bi-x-circle"> Reject</i></a>
@@ -59,6 +60,6 @@
                     }
                 </tbody>
             </table>
-        }
+        
         
 </div>
