--- a/Student_Card/Views/Shared/_Layout.cshtml
+++ b/Student_Card/Views/Shared/_Layout.cshtml
@@ -31,35 +31,36 @@
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            
+                             @if(User.IsInRole(SD.Role_Admin))
+                             {
+                                 <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                       Content Management
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
+                                       <li>
+                                           <a class="dropdown-item text-dark" asp-area="" asp-controller="Student" asp-action="Index">Students</a>
+                                       </li>
+                                       <li>
+                                           <a class="dropdown-item text-dark" asp-area="" asp-controller="Course" asp-action="Index">Courses</a>
+                                       </li>
+                                       <li>
+                                           <a class="dropdown-item text-dark" asp-area="" asp-route-user="@UserManager.GetUserName(User)" asp-controller="StudentCard" asp-action="Index">Student Card</a>
+                                       </li>
+
+
+                                    </ul>
+
+                                 </li>
+                             }
+                            else
+                            {
+                                <li>
+                                    <a class="nav-link text-dark" asp-area="" asp-route-user="@UserManager.GetUserName(User)" asp-controller="StudentCard" asp-action="Index">Student Card</a>
+                                </li>
+                            }
                           
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Content Management
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    @if(User.IsInRole(SD.Role_Admin))
-                                    {
-                                        <li>
-                                            <a class="dropdown-item text-dark" asp-area="" asp-controller="Student" asp-action="Index">Students</a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item text-dark" asp-area="" asp-controller="Course" asp-action="Index">Courses</a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item text-dark" asp-area="" asp-route-user="@UserManager.GetUserName(User)" asp-controller="StudentCard" asp-action="Index">Student Card</a>
-                                        </li>
-                                    }
-                                    else
-                                    {
-                                        <li>
-                                            <a class="dropdown-item text-dark" asp-area="" asp-route-user="@UserManager.GetUserName(User)" asp-controller="StudentCard" asp-action="Index">Student Card</a>
-                                        </li>
-                                    }
-
-                                </ul>
-                            </li>
                         }
                     </ul>
                         <partial name="_LoginPartial" />
