--- a/Student_Card/Views/StudentCard/Index2.cshtml
+++ b/Student_Card/Views/StudentCard/Index2.cshtml
@@ -62,18 +62,18 @@
 
                     </div>
 
-                    <div class="row pt-2">
-                        <div class="col-6 col-md-3">
-                            <button type="submit" class=" btn btn-danger w-100" asp-route-studentViewModel="@Model" asp-action="Delete">
-                                <i class="bi bi-trash-fill"> Delete</i>
-                            </button>
+                    @if(Model.Status!=SD.StatuseApproved)
+                    {
+                        <div class="row pt-2">
+                            <div class="col-6 col-md-3">
+                                <button type="submit" class=" btn btn-danger w-100" asp-action="Delete">
+                                    <i class="bi bi-trash-fill"> Delete</i>
+                                </button>
+                            </div>
+
                         </div>
-                        <div class="col-6 col-md-3">
-                            <a asp-controller="StudentCard" asp-route-user="@UserManager.GetUserName(User)" asp-action="Index" class="btn btn-secondary w-100">
-                                <i class="bi bi-x-circle"> Cancel</i>
-                            </a>
-                        </div>
-                    </div>
+                    }
+                  
                 </div>
             </div>
             <div class="col-4">
